kubernetes/apps/web/outline/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: outline
spec:
  selector:
    matchLabels:
      app: outline
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: outline
    spec:
      volumes:
        - name: outline-data
          persistentVolumeClaim:
            claimName: outline-data
        - name: outline-db
          persistentVolumeClaim:
            claimName: outline-db
        - name: outline-minio
          persistentVolumeClaim:
            claimName: outline-minio
      containers:
        - name: outline
          image: outlinewiki/outline:0.69.2
          command: ["sh", "-c", "yarn sequelize:migrate --env production-ssl-disabled && yarn start"]
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
        - name: postgres
          volumeMounts:
          - name: outline-db
            mountPath: "/var/lib/postgresql/data"
            subPath: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
        - name: redis
          image: redis:latest
          ports:
          - containerPort: 6379
        - name: minio
          volumeMounts:
          - name: outline-minio
            mountPath: "/data"
            subPath: minio
          image: minio/minio:latest
          args:
          - server
          - /data
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 20
