kubernetes/apps/web/outline/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: web
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: outline
