kubernetes/apps/web/outline/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
  namespace: web
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "outline.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline
                port:
                  name: http
          - backend:
              service:
                name: outline
                port:
                  name: websocket
            path: /
            pathType: Prefix
